fixed footer styles to align contact us with language selector #301

--- a/src/static/src/scss/components/_footer.scss
+++ b/src/static/src/scss/components/_footer.scss
@@ -41,8 +41,12 @@
     }
   }
 
+  &__feedback-link-wrapper {
+    align-self: center;
+  }
 
   &__feedback-link {
+    align-self: center;
     align-items: center;
     display: flex;
     font-weight: 400;
